# SDIS

./: .gitignore
car_salon_project/: .gitignore  README.md  pyproject.toml  run.py
car_salon_project/car_salon/: bootstrap.py  cli.py  db.py  exceptions.py  launcher.py  models.py  repositories.py  services.py
car_salon_project/car_salon/web/: __init__.py  app.py  deps.py  forms.py  navigation.py  presenters.py  serializers.py
car_salon_project/car_salon/web/routers/: __init__.py  actions.py  api.py  dashboard.py
car_salon_project/car_salon/web/static/: styles.css
car_salon_project/car_salon/web/templates/: base.html  dashboard.html
car_salon_project/docs/uml/: car_state_diagram.puml  class_diagram.puml
car_salon_project/tests/: test_web.py  test_workflow.py
crimsonland_lab/: .gitignore  README.md  main.py
crimsonland_lab/assets/images/: README.md
crimsonland_lab/config/: enemies.json  particles.json  players.json  scores.json  settings.json  waves.json  weapons.json
crimsonland_lab/docs/: architecture.md
crimsonland_lab/src/: app.py
crimsonland_lab/src/core/: config_loader.py  highscores.py  particle_effects.py  player_profiles.py  resource_manager.py
crimsonland_lab/tests/: test_config_loader.py  test_highscores.py  test_particle_effects.py  test_player_profiles.py  test_progression.py  test_wave_controller.py  test_weapon_math.py
sports_app/: DEFENSE_PREP.md  README.md  __init__.py  run.py
sports_app/app/: __init__.py
sports_app/data/: app.db
sports_app/samples/: __init__.py  athletes_50_a.xml  athletes_50_b.xml  generate_samples.py
(+25 files in other folders)
