[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "car-salon-52"
version = "0.1.0"
description = "CLI and FastAPI model of a car salon"
requires-python = ">=3.10"
dependencies = ["coverage", "fastapi", "httpx", "jinja2", "plantuml", "uvicorn"]

[project.scripts]
car-salon = "car_salon.launcher:main"
car-salon-web = "car_salon.launcher:web_main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["car_salon*"]
